<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andremartinez.losverdes.ActionsFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/bsede"
            android:hint="@string/bsede"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_group">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accionBuscar"
                    android:id="@+id/radioFind"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accionBorrar"
                    android:id="@+id/radioDel"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accionAgreg"
                    android:id="@+id/radioAdd"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accionModif"
                    android:id="@+id/radioMod"/>

            </RadioGroup>

            <Space
                android:layout_width="80sp"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton1"
                android:id="@+id/buttonOK"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NameAct"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LatAct"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LongAct"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tName"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tLat"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tLong"
                android:textSize="20sp"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton2"
            android:id="@+id/buttonDel"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

            <EditText
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:id="@+id/eLatNew"
                android:hint="@string/LatNew"
                android:textSize="20sp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

            <EditText
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:id="@+id/eLongNew"
                android:hint="@string/LongNew"
                android:textSize="20sp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton3"
            android:id="@+id/buttonSave"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>
